# photo-pipeline

./: .gitignore  README.md  hybrid-qwen-claude.ipynb  main.py  model_clustering_comparison.ipynb  model_compare.ipynb  photo_pipeline_v2.ipynb  photo_pipeline_v3.ipynb  pyproject.toml  qwen.ipynb  qwen3_v2_pipeline.ipynb  qwen3_vl_pipeline.ipynb  qwen_V2.ipynb  similarity_search.ipynb  similarity_search_v2.ipynb  similarity_search_v5.ipynb
docs/: Draft.md  Image SEO & Metadata Specification.md  Indexing Documents with RAG.md  Intro to Vision Language Model.md  Kinan & Jim.md  Photo Pipeline.md  Prompts Experemntations.md  Street Photography VLM Prompts.md  Supervised Fine-Tuning.md  V4 Style Similarity Search Design.md  seo-pipeline-strategy.md
docs/.obsidian/: workspace.json
scripts/: analyze_comparison.py  batch_process.py  compare_models.py  extract_v3_features.py  extract_v4_features.py  init_db.py  process_photo.py  search_v3.py  search_v4.py
