[project]
name = "photo-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.1",
    "huggingface-hub>=1.9.0",
    "mlx>=0.31.1",
    "mlx-vlm>=0.4.4",
    "pillow>=12.2.0",
    "rich>=14.3.3",
    "torchvision>=0.26.0",
]
