[project]
name = "photo-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.89.0",
    "duckdb>=1.5.1",
    "google-genai>=1.70.0",
    "google-generativeai>=0.8.6",
    "huggingface-hub>=1.9.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "mlx>=0.31.1",
    "mlx-vlm>=0.4.4",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "scikit-learn>=1.5.0",
    "torchvision>=0.26.0",
]
